adding changes security condition